--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <ul class="lista">
+
+    </ul>
     <script src="js/script.js"></script>
 </body>
 </html>
